Update JavaMemoryManagement.md